--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.wazza.android.testbed.MainActivity"
-    >
+    tools:context="com.wazza.android.testbed.MainActivity">
 
     <TextView
         android:text="@string/hello_world"
