--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/screen_main"
         android:visibility="visible"
         android:orientation="vertical">
-    
+
     	<ImageView
     	    android:src="@drawable/title"
     	    android:layout_width="wrap_content"
@@ -79,5 +79,12 @@
     	   	
     	</LinearLayout>
     </LinearLayout>
-    
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_gravity="left|top"
+        android:src="@drawable/wazza"/>
+
 </FrameLayout>
