--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.wazza.testbed.MainActivity">
+    tools:context="io.wazza.testbed.MainActivity">
 
     <item
         android:id="@+id/action_settings"
